--- a/pomodoro.html
+++ b/pomodoro.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <title>learnbetter</title>
 </head>
 <body>
-    <a href="routine.html">Lernroutine</a>
-    <a href="pomodoro.html">pomodoro</a>
+    <a href="index.html">Home</a>
+    <h3 id="state"></h3>
+    <h2 id="countdown"></h2>
+    <button id="startButton">Start Pomodoro</button>
+    <button id="resetButton">Reset</button>
+    <script src="pomodoro.js"></script>
+
 </body>
 </html>
